--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/nanio&Alejandro.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lenguaje && Autómatas</title>
   </head>
